Buttons und Behavior für Peripheren Content

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,11 @@ js/_bootstrap.bundle.min.js.map
 firebase.js
 tests/
 .vscode/launch.json
+models/29-04-2025_1_world.class.js
+models/0_audiomanager_.js
+
 
 
 Archiv/
 _modul12_el-pollo-loco.code-workspace
+desktop.ini
